# Universal-Game-Mod-Manifest-Parser

./: .gitignore  README.md  _init_.py  parser.py  pyproject.toml  test_parser_.py
